Therion 6.1.7 (in progress):

therion:
 * bugs fixed:
   - thbook: document the usage of TeX registers [#485]

xtherion:
 * bugs fixed:
   - fixed polyline to bezier conversion bug introduced in 6.1.4

infrastructure:
 * therion no longer includes an internal copy of fmtlib
 * system fmtlib is a mandatory dependency now

--------------------------------------------------------------------------------

Therion 6.1.6 (2023-01-11):

therion:
 * bugs fixed:
   -  Incorrect output coordinates system [#482]
   -  documentation fixes

infrastructure:
 * updated release script

--------------------------------------------------------------------------------

Therion 6.1.5 (2022-12-30):

therion:
 * bugs fixed
   - v6.1.4 won't overwrite output files on Windows [#480, #481]

infrastructure:
 * updated GitHub Actions
 * updated make_relase.py

--------------------------------------------------------------------------------

Therion 6.1.4 (2022-12-23):

therion:
 * platform-independent titles in 3d, html and kml outputs [#469, Matěj Plch]
 * bugs fixed:
   - scrap lookup colouring fix

xtherion:
 * added support for converting all eligible poly lines to curves in one
   operation [Mark Dickey]
 * udated Portuguese translation [#473, Rodrigo Severo]

infrastructure, code refactoring:
 * GitHub Actions: upload samples artefacts; fix deprecated actions;
   build samples on Mac OS; enable static code analysis by CodeQL [Matěj Plch]
 * code modernisation (std::filesystem, fmt::format);
   fixed compiler warnings [Matěj Plch]
 * Makefile fixed

--------------------------------------------------------------------------------

Therion 6.1.3 (2022-11-26):

therion:
 * Slovenian translation updated [#462, Marko Zakrajsek]
 * improve output reproducibility across platforms (two-pass rounding,
   improved angles calculation in the warping algorithm)
 * bugs fixed
   - at non-int mapping of scale to base-scale, text labels get debugging text
     added before them [#428]

infrastructure: