@@ -485,6 +485,7 @@
 \def\scalebar{\pdfrefxform\getref{THWscalebar}}
 \def\altitudebar{\pdfrefxform\getref{THWaltitudebar}}
 \def\northarrow{\pdfrefxform\getref{THWnortharrow}}
+\def\coordfont{\rm\size[10]}
 \newdimen\legendwidth %\legendwidth=14cm
 \newcount\legendcolumns \legendcolumns=2
 
