@@ -574,8 +574,11 @@ if (ENC_NEW.NFSS==0) {
       // it would be possible to add here various characters mapped
       // by plain TeX macros to mathematical fonts (backslash &c.)
       // This would require to make math fonts scalable with the \size[.] macro
-    
-      T << ".";
+
+      switch (wc) {
+        case 8722: T << "--";  break;  // unicode minus
+        default:   T << ".";   break;
+      }
 
 } else { // NFSS == 1
       int k = ENC_NEW.get_enc_pos(wc);
